[package]
name = "cosmic-reader"
version = "0.1.0"
edition = "2021"

[dependencies]
#TODO: color_space may not be maintained
color_space = "0.5"
env_logger = "0.11"
log = "0.4"
num = "0.4"
rayon = "1"
tokio = { version = "1", features = ["sync"] }
#TODO: export ttf-parser in fontdb?
ttf-parser = "0.25"
url = "2"
# Internationalization
i18n-embed = { version = "0.15", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.9"
icu_collator = "1.5"
icu_provider = { version = "1.5", features = ["sync"] }
rust-embed = "8"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["tokio", "winit"]

# For lopdf feature

[dependencies.lopdf]
git = "https://github.com/J-F-Liu/lopdf.git"
optional = true

# For mupdf feature

[dependencies.mupdf]
git = "https://github.com/jackpot51/mupdf-rs"
branch = "0.5"
optional = true

# For poppler feature

[dependencies.cairo-rs]
version = "0.21"
features = ["png", "svg"]
optional = true

[dependencies.poppler-rs]
version = "0.25"
optional = true

[features]
default = ["mupdf", "wgpu"]
poppler = ["dep:cairo-rs", "dep:poppler-rs"]
wgpu = ["libcosmic/wgpu"]
